add
added search function to search for users in db
